Plugin-Erstellungs-Post ergänzt